Fix for column spacing
git-svn-id: http://svn.apache.org/repos/asf/portals/jetspeed-2/trunk@354764 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/webapp/decorations/layout/jscookmenu/css/styles.css
+++ b/src/webapp/decorations/layout/jscookmenu/css/styles.css
@@ -109,3 +109,12 @@ body.layout-jscookmenu
   padding: 2px;
 }
 
+/** TwoColumn Sepcific widths */
+.layout-jscookmenu .portal-layout-TwoColumns .portal-layout-column
+{  
+  padding-left:1%;
+  width: 48%;
+  float: left;  
+}
+
+
